# cargo-fak

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/adr/: 1602892663_an-example.md
scripts/: usage-examples.sh
src/: main.rs
